--- a/.gitignore
+++ b/.gitignore
@@ -2,10 +2,13 @@
 *.pyc
 .*.swp
 
-build/
-concrete.egg-info/
-dist/
-gen-py/
-setuptools*.zip
-setuptools*.egg
-testfixtures*.egg
+/build/
+/concrete.egg-info/
+/dist/
+/gen-py/
+/setuptools*.zip
+/setuptools*.egg
+/testfixtures*.egg
+
+/a/
+/b/
