Enforce Flake8 stylistic checks
Flake8 is a wrapper for several different tools, including PyFlakes,
pep8, and a McCabe complexity checker. Many of the checks are
stylistic although common coding mistakes (e.g., using an undefined
variable) are also reported.

This change enables Flake8 by default as part of the tox tests but
only for the concrete/util module. Other modules are omitted because
they are auto-generated by the Thrift compiler and do not adhere to
Python's standard coding style. (It would be advantageous to restrict
all Thrift code to a single module (such as concrete.thrift) to allow
all other code to be checked more easily.)

--- a/tox.ini
+++ b/tox.ini
@@ -1,5 +1,5 @@
 [tox]
-envlist = py27
+envlist = pep8,py27
 
 [testenv]
 deps = -r{toxinidir}/requirements.txt
@@ -7,3 +7,6 @@ deps = -r{toxinidir}/requirements.txt
 
 commands =
     py.test --strict tests
+
+[testenv:pep8]
+commands = flake8 concrete/util
