--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,34 +1,33 @@
-test:centos:
-  image: centos:centos7
-  script:
-    - bash docker/centos-install-deps.bash
-    - python setup.py test --addopts '--cov=concrete/ tests'
-    - bash check-style.bash
-  tags:
-    - docker
+before_script:
+  - docker info
 
-tox:centos:
-  image: centos:centos7
+build-only:
   script:
-    - bash docker/centos-install-deps.bash
-    - tox
+    - docker build --pull=true -t concrete-python .
+    - docker run concrete-python python setup.py test --addopts '--cov=concrete/ tests'
+    - docker run concrete-python bash check-style.bash
+    - docker run concrete-python python setup.py install --user test --addopts integration-tests
   tags:
-    - docker
+    - shell
 
-install:centos:
-  image: centos:centos7
+build-only:ubuntu:
   script:
-    - bash docker/centos-install-deps.bash
-    - python setup.py install
+    - docker build --pull=true -t concrete-python-ubuntu -f ubuntu.Dockerfile .
+    - docker run concrete-python-ubuntu python setup.py test --addopts '--cov=concrete/ tests'
+    - docker run concrete-python-ubuntu bash check-style.bash
+    - docker run concrete-python-ubuntu python setup.py install --user test --addopts integration-tests
   tags:
-    - docker
+    - shell
 
-integration:centos:
-  image: centos:centos7
+build-deploy:
   script:
-    - bash docker/centos-install-deps.bash
-    - bash docker/centos-install-integration-deps.bash
-    - python setup.py install
-    - python setup.py test --addopts integration-tests
+    - docker build --pull=true -t concrete-python .
+    - docker run concrete-python python setup.py test --addopts '--cov=concrete/ tests'
+    - docker run concrete-python bash check-style.bash
+    - docker run concrete-python python setup.py install --user test --addopts integration-tests
+    - docker tag concrete-python r8n01:5000/concrete-python:master
+    - docker push r8n01:5000/concrete-python:master
   tags:
-    - docker
+    - shell
+  only:
+    - master
