update deploy CI target to new dockerfile spec

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -17,10 +17,8 @@ build-only:ubuntu:
 
 build-deploy-accel:
   script:
-    - docker build --pull=true -t concrete-python .
-    - docker run concrete-python python setup.py test --addopts '--cov=concrete/ tests'
-    - docker run concrete-python bash check-style.bash
-    - docker run concrete-python python setup.py install --user test --addopts integration-tests
+    - docker build --no-cache --pull=true -t concrete-python .
+    - docker run concrete-python python setup.py test --addopts integration-tests
     - docker tag concrete-python r8n01:5000/concrete-python:accel
     - docker push r8n01:5000/concrete-python:accel
   tags:
