--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -3,23 +3,23 @@ before_script:
 
 build-only:
   script:
-    - docker build --pull=true -t concrete-python .
-    - docker run concrete-python python setup.py test --addopts integration-tests
+    - docker build --pull=true -t concrete-python:accel .
+    - docker run concrete-python:accel python setup.py test --addopts integration-tests
   tags:
     - shell
 
 build-only:ubuntu:
   script:
-    - docker build --pull=true -t concrete-python-ubuntu -f ubuntu.Dockerfile .
-    - docker run concrete-python-ubuntu python setup.py test --addopts integration-tests
+    - docker build --pull=true -t concrete-python-ubuntu:accel -f ubuntu.Dockerfile .
+    - docker run concrete-python-ubuntu:accel python setup.py test --addopts integration-tests
   tags:
     - shell
 
 build-deploy-accel:
   script:
-    - docker build --pull=true -t concrete-python .
-    - docker run concrete-python python setup.py test --addopts integration-tests
-    - docker tag concrete-python r8n01:5000/concrete-python:accel
+    - docker build --pull=true -t concrete-python:accel .
+    - docker run concrete-python:accel python setup.py test --addopts integration-tests
+    - docker tag concrete-python:accel r8n01:5000/concrete-python:accel
     - docker push r8n01:5000/concrete-python:accel
   tags:
     - shell
