--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,27 +1,22 @@
 before_script:
   - docker info
 
-build-only:
+build-test-ubuntu:
   script:
-    - docker build --pull=true -t concrete-python .
-    - docker run concrete-python python setup.py test --addopts integration-tests
-  tags:
-    - shell
-
-build-only:ubuntu:
-  script:
-    - docker build --pull=true -t concrete-python-ubuntu -f ubuntu.Dockerfile .
+    - docker build -t concrete-python-ubuntu -f ubuntu.Dockerfile .
+    - docker run concrete-python-ubuntu bash check-style.bash
+    - docker run concrete-python-ubuntu python setup.py test
     - docker run concrete-python-ubuntu python setup.py test --addopts integration-tests
   tags:
     - shell
 
-build-deploy:
+build-test-deploy:
   script:
-    - docker build --pull=true -t concrete-python .
+    - docker build -t concrete-python .
+    - docker run concrete-python bash check-style.bash
+    - docker run concrete-python python setup.py test
     - docker run concrete-python python setup.py test --addopts integration-tests
-    - docker tag concrete-python r8n01:5000/concrete-python:master
-    - docker push r8n01:5000/concrete-python:master
+    - docker tag concrete-python r8n01:5000/concrete-python:latest
+    - docker push r8n01:5000/concrete-python:latest
   tags:
     - shell
-  only:
-    - master
