--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -1,2 +1,12 @@
-recursive-include tests/testdata *.concrete simple*
-exclude tests/testdata/create_simple_communications.py*
+recursive-include tests *
+exclude tests/testdata/create_simple_communications.py
+recursive-include examples *
+recursive-include integration-tests *
+include LICENSE.md
+include pytest.ini
+include README.md
+include requirements.txt
+include test-requirements.txt
+include tox.ini
+include Dockerfile
+include ubuntu.Dockerfile
