--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -4,9 +4,9 @@ before_script:
 build-test-deploy-accel:
   script:
     - docker build --pull=true -t concrete-python:accel .
-    - docker run concrete-python:accel bash check-style.bash
-    - docker run concrete-python:accel python setup.py test
-    - docker run concrete-python:accel python setup.py test --addopts integration-tests
+    - docker run --rm concrete-python:accel bash check-style.bash
+    - docker run --rm concrete-python:accel python setup.py test
+    - docker run --rm concrete-python:accel python setup.py test --addopts integration-tests
     - docker tag concrete-python:accel r8n01:5000/concrete-python:accel
     - docker push r8n01:5000/concrete-python:accel
     - # work around gitlab CI... only deploy on accel
