--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -5,6 +5,7 @@ build-test-deploy:
   script:
     - docker build -t concrete-python .
     - docker run --rm concrete-python bash check-style.bash
+    - docker run --rm concrete-python python setup.py install --user
     - docker run --rm concrete-python python setup.py test
     - docker run --rm concrete-python python setup.py test --addopts integration-tests
     - # work around gitlab CI... only deploy on master
