Refactor build, simplifying with tox.
Miscellaneous build improvements:
* add sketch of sphinx documentation check to tox.ini (unused)
* move file_io test to integration-tests
* decrease fudge in test_file_io timestamp check
* remove extraneous hashbang, main from imports test
* add trove classifiers to setup.py
* convert redis_io integration test to pytest function style
* remove pytest.ini, setup.cfg, requirements.txt
* update CONTRIBUTING.rst, MANIFEST.in to reflect new build
* remove check-todo-fixme-hack.bash, check-style.bash
* update Travis configuration to reflect new build
* remove setup_requires and tests_require, specify deps in tox.ini
  (closes #66)

Library bugfixes/improvements:
* remove numpy/scipy dep in concrete.util.tokenization via fallback
* add missing services.results star-import

Expanded Windows coverage via Appveyor:
* update Appveyor configurations to reflect new build
* install Python 3.5 in Docker image, Appveyor build
* convert newlines to os.linesep in tests, where needed
* run integration tests on Appveyor
* use sys.executable to fix script integration tests on Windows
* mask stdin/stdout tests, fifo tests on Windows
* safely encode logging conf in twitter integration test on Windows

Increase version to 4.12.6b1.

--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -2,12 +2,10 @@ recursive-include tests *
 exclude tests/testdata/create_simple_communications.py
 recursive-include examples *
 recursive-include integration-tests *
-include LICENSE
-include pytest.ini
-include README.rst
+include .flake8
 include AUTHORS
 include CHANGELOG
-include requirements.txt
+include LICENSE
+include README.rst
 include test-requirements.txt
 include tox.ini
-include Dockerfile
