--- a/tox.ini
+++ b/tox.ini
@@ -1,12 +1,19 @@
 [tox]
 envlist = pep8,py27
+#envlist = pep8,py27,py35,docs
 
 [testenv]
-deps = -r{toxinidir}/requirements.txt
-       -r{toxinidir}/test-requirements.txt
-
+deps = -r{toxinidir}/test-requirements.txt
 commands =
-    py.test --strict tests
+    py.test --cov={envsitepackagesdir}/concrete {posargs:tests}
 
 [testenv:pep8]
-commands = flake8 concrete/util
+deps = flake8
+commands =
+    flake8
+
+[testenv:docs]
+deps = sphinx
+changedir = doc
+commands =
+    sphinx-build -W -d {envtmpdir}/doctrees . {envtmpdir}/html
