--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -4,9 +4,8 @@ before_script:
 build-test-deploy:
   script:
     - docker build -t concrete-python .
-    - docker run --rm concrete-python bash check-style.bash
-    - docker run --rm concrete-python python setup.py test
-    - docker run --rm concrete-python python setup.py test --addopts integration-tests
+    - docker run --rm concrete-python tox
+    - docker run --rm concrete-python tox integration-tests
     - # work around gitlab CI... only deploy on master
       bash -c "[[ $CI_BUILD_REF_NAME != master ]] ||
       (docker tag concrete-python r8n01:5000/concrete-python:latest &&
