--- a/.travis.yml
+++ b/.travis.yml
@@ -8,6 +8,5 @@ before_script:
 
 script:
   - docker build -t concrete-python .
-  - docker run --rm concrete-python bash check-style.bash
-  - docker run --rm concrete-python python setup.py test
-  - docker run --rm concrete-python python setup.py test --addopts integration-tests
+  - docker run --rm concrete-python tox
+  - docker run --rm concrete-python tox integration-tests
