remove docs env stub from tox.ini

--- a/tox.ini
+++ b/tox.ini
@@ -1,6 +1,6 @@
 [tox]
 envlist = pep8,py27
-#envlist = pep8,py27,py35,docs
+#envlist = pep8,py27,py35
 
 [testenv]
 deps = -r{toxinidir}/test-requirements.txt
@@ -11,9 +11,3 @@ commands =
 deps = flake8
 commands =
     flake8
-
-[testenv:docs]
-deps = sphinx
-changedir = doc
-commands =
-    sphinx-build -W -d {envtmpdir}/doctrees . {envtmpdir}/html
