Add Python 3 support.
Closes #9.  Closes #64.

--- a/tox.ini
+++ b/tox.ini
@@ -1,6 +1,5 @@
 [tox]
-envlist = pep8,py27
-#envlist = pep8,py27,py35
+envlist = pep8,py27,py35
 
 [testenv]
 deps = -r{toxinidir}/test-requirements.txt
