--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -2,7 +2,7 @@ recursive-include tests *
 exclude tests/testdata/create_simple_communications.py
 recursive-include examples *
 recursive-include integration-tests *
-include .flake8
+include setup.cfg
 include AUTHORS
 include CHANGELOG
 include LICENSE
