add comments explaining where config is located

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -4,7 +4,7 @@ before_script:
 build-test-deploy:
   script:
     - docker build -t concrete-python .
-    - docker run --rm concrete-python tox
+    - docker run --rm concrete-python tox # configured in tox.ini
     - docker run --rm concrete-python tox integration-tests
     - # work around gitlab CI... only deploy on master
       bash -c "[[ $CI_BUILD_REF_NAME != master ]] ||
