--- a/tox.ini
+++ b/tox.ini
@@ -6,6 +6,7 @@ deps = -r{toxinidir}/test-requirements.txt
 commands =
     py.test --cov={envsitepackagesdir}/concrete {posargs:tests}
 
+; see setup.cfg for flake8 configuration
 [testenv:pep8]
 deps = flake8
 commands =
