--- a/tox.ini
+++ b/tox.ini
@@ -1,5 +1,5 @@
 [tox]
-envlist = pep8,py27,py35
+envlist = pep8,py27,py35,docs
 
 [testenv]
 deps = -r{toxinidir}/test-requirements.txt
@@ -10,3 +10,9 @@ commands =
 deps = flake8
 commands =
     flake8
+
+[testenv:docs]
+changedir = docs
+deps = sphinx
+commands =
+	sphinx-build -M html . {envtmpdir}
