build docs from root, persist

--- a/tox.ini
+++ b/tox.ini
@@ -12,7 +12,6 @@ commands =
     flake8
 
 [testenv:docs]
-changedir = docs
 deps = sphinx
 commands =
-	sphinx-build -M html . {envtmpdir}
+	sphinx-build -M html docs docs/_build
