use parametrized paths in docs build

--- a/tox.ini
+++ b/tox.ini
@@ -12,7 +12,8 @@ deps = flake8
 commands =
     flake8
 
+; see docs/conf.py for sphinx configuration
 [testenv:docs]
 deps = sphinx
 commands =
-	sphinx-build -M html docs docs/_build
+	sphinx-build -M html {toxinidir}/docs {toxinidir}/docs/_build
