--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -4,8 +4,7 @@ before_script:
 build-test-deploy:
   script:
     - docker build -t concrete-python .
-    - docker run --rm concrete-python tox # configured in tox.ini
-    - docker run --rm concrete-python tox integration-tests
+    - docker run --rm concrete-python tox -e pep8,py27,py35,docs tests integration-tests # configured in tox.ini
     - # work around gitlab CI... only deploy on master
       bash -c "[[ $CI_BUILD_REF_NAME != master ]] ||
       (docker tag concrete-python r8n01:5000/concrete-python:latest &&
