--- a/appveyor.yml
+++ b/appveyor.yml
@@ -8,5 +8,4 @@ install:
 - pip install tox
 
 build_script:
-- tox # configured in tox.ini
-- tox integration-tests
+- tox -e pep8,py27,py35,docs tests integration-tests # configured in tox.ini
