--- a/tox.ini
+++ b/tox.ini
@@ -15,5 +15,6 @@ commands =
 ; see docs/conf.py for sphinx configuration
 [testenv:docs]
 deps = sphinx
+    sphinx_rtd_theme
 commands =
 	sphinx-build -M html {toxinidir}/docs {toxinidir}/docs/_build
