--- a/tox.ini
+++ b/tox.ini
@@ -17,4 +17,4 @@ commands =
 deps = sphinx
     sphinx_rtd_theme
 commands =
-	sphinx-build -M html {toxinidir}/docs {toxinidir}/docs/_build
+	sphinx-build -M html {toxinidir}/docs {envtmpdir}
