--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -4,7 +4,8 @@ before_script:
 build-test-deploy:
   script:
     - docker build -t concrete-python .
-    - docker run --rm concrete-python tox -e pep8,py27,py35,docs tests integration-tests # configured in tox.ini
+    - docker run --rm concrete-python tox -e pep8,py27,py35,docs tests # configured in tox.ini
+    - docker run --rm concrete-python tox -e py27,py35 integration-tests
     - # work around gitlab CI... only deploy on master
       bash -c "[[ $CI_BUILD_REF_NAME != master ]] ||
       (docker tag concrete-python r8n01:5000/concrete-python:latest &&
