--- a/appveyor.yml
+++ b/appveyor.yml
@@ -3,9 +3,9 @@ version: '{build}-{branch}'
 skip_branch_with_pr: false
 
 install:
-- nuget install redis-64 -excludeversion
-- set PATH=C:\Python27-x64\scripts;C:\Python27-x64;C:\Python35-x64\scripts;C:\Python35-x64;redis-64\tools;%PATH%
+- set PATH=C:\Python27-x64\scripts;C:\Python27-x64;C:\Python35-x64\scripts;C:\Python35-x64;%PATH%
 - pip install tox
 
 build_script:
-- tox -e pep8,py27,py35,docs tests integration-tests # configured in tox.ini
+- tox -e pep8,py27,py35,docs tests # configured in tox.ini
+- tox -e py27,py35 integration-tests
