add per-platform before_script to gitlab CI

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,7 +1,6 @@
-before_script:
-  - docker info
-
 build-test-deploy:
+  before_script:
+    - docker info
   script:
     - docker build -t concrete-python .
     - docker run --rm concrete-python tox -e pep8,py27,py35,docs tests # configured in tox.ini
@@ -14,6 +13,9 @@ build-test-deploy:
     - shell
 
 mac-python-test:
+  before_script:
+    - python --version
+    - tox --version
   script:
     - tox
   tags:
