--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -17,7 +17,7 @@ mac-python-test:
     - python --version
     - tox --version
   script:
-    - tox
-    - tox integration-tests
+    - tox -e pep8,py27,py35,docs tests
+    - tox -e py27,py35 integration-tests
   tags:
     - mac-shell-no-docker
