Skip thrift_spec field in autodoc.  (closes #134)

--- a/tox.ini
+++ b/tox.ini
@@ -14,7 +14,7 @@ commands =
 
 ; see docs/conf.py for sphinx configuration
 [testenv:docs]
-deps = sphinx
+deps = sphinx>=1.5.4
     sphinx_rtd_theme
 commands =
 	sphinx-build -M html {toxinidir}/docs {envtmpdir}
