--- a/tox.ini
+++ b/tox.ini
@@ -17,4 +17,4 @@ commands =
 deps = sphinx>=1.5.4
     sphinx_rtd_theme
 commands =
-	sphinx-build -M html {toxinidir}/docs {envtmpdir}
+	sphinx-build -M html {toxinidir}/docs {envtmpdir} -W
