Disabled PEP8 checks for Thrift-generated code in concrete/summarization/

--- a/setup.cfg
+++ b/setup.cfg
@@ -27,6 +27,7 @@ exclude =
     concrete/services/*,
     concrete/situations/*,
     concrete/spans/*,
+    concrete/summarization/*,
     concrete/structure/*,
     concrete/twitter/*,
     concrete/uuid/*
