--- a/appveyor.yml
+++ b/appveyor.yml
@@ -5,6 +5,8 @@ skip_branch_with_pr: false
 install:
 - set PATH=C:\Python27-x64\scripts;C:\Python27-x64;C:\Python35-x64\scripts;C:\Python35-x64;%PATH%
 - pip install tox
+- git config core.symlinks true
+- git reset --hard
 
 build_script:
 - tox -e pep8,py27,py35,docs tests # configured in tox.ini
