Changed GitLab executor from 'shell' to 'docker'

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -6,7 +6,7 @@ build-test-deploy:
     - docker run --rm concrete-python tox -c concrete-python -e pep8,py27,py35,docs tests # configured in tox.ini
     - docker run --rm concrete-python tox -c concrete-python -e py27,py35 integration-tests
   tags:
-    - shell
+    - docker
 
 mac-python-test:
   before_script:
