Updated GitLab CI to use docker-in-docker (dind)

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,5 +1,8 @@
 build-test-deploy:
-  image: docker:latest
+  image:
+    - docker:latest
+  services:
+    - docker:dind
   before_script:
     - docker info
   script:
