Prevent tox from using sphinx 1.8.0, which has a known bug:
  https://github.com/sphinx-doc/sphinx/issues/5417

--- a/tox.ini
+++ b/tox.ini
@@ -14,7 +14,9 @@ commands =
 
 ; see docs/conf.py for sphinx configuration
 [testenv:docs]
-deps = sphinx>=1.5.4
+; There is a bug in sphinx 1.8.0 that causes test failures:
+;   https://github.com/sphinx-doc/sphinx/issues/5417
+deps = sphinx >=1.5.4, !=1.8.0
     sphinx_rtd_theme
 commands =
 	sphinx-build -M html {toxinidir}/docs {envtmpdir} -W
