--- a/.travis.yml
+++ b/.travis.yml
@@ -15,5 +15,5 @@ install:
     - ./.travis/install.bash
 
 script:
-  - tox -e pep8,py27,py35,docs tests # configured in tox.ini
-  - tox -e py27,py35 integration-tests
+  - tox -e pep8,py35,docs tests # configured in tox.ini
+  - tox -e py35 integration-tests
