--- a/.travis.yml
+++ b/.travis.yml
@@ -7,13 +7,15 @@ matrix:
         - os: linux
         - os: osx
           env:
-          - LDFLAGS=-L/usr/local/opt/openssl/lib
-            CPPFLAGS=-I/usr/local/opt/openssl/include
-
+          - LDFLAGS="-L/usr/local/opt/openssl/lib -L/usr/local/opt/zlib/lib"
+            CPPFLAGS="-I/usr/local/opt/openssl/include -I/usr/local/opt/zlib/include"
 
 install:
     - ./.travis/install.bash
 
 script:
-  - tox -e pep8,py35,docs tests # configured in tox.ini
+  # configured in tox.ini
+  - tox -e pep8
+  - tox -e docs
+  - tox -e py35 tests
   - tox -e py35 integration-tests
