--- a/appveyor.yml
+++ b/appveyor.yml
@@ -9,5 +9,8 @@ install:
 - git reset --hard
 
 build_script:
-- tox -e pep8,py35,docs tests # configured in tox.ini
+# configured in tox.ini
+- tox -e pep8
+- tox -e docs
+- tox -e py35 tests
 - tox -e py35 integration-tests
