Explicitly set PYTHONPATH in tox.ini to fix Appveyor CI issue

--- a/tox.ini
+++ b/tox.ini
@@ -5,6 +5,8 @@ envlist = pep8,py35,docs
 deps = -r{toxinidir}/test-requirements.txt
 commands =
     py.test --cov={envsitepackagesdir}/concrete {posargs:tests}
+setenv =
+    PYTHONPATH = {toxinidir}
 
 ; see setup.cfg for flake8 configuration
 [testenv:pep8]
