Resolve "Update to Concrete schema 4.15"

--- a/setup.cfg
+++ b/setup.cfg
@@ -15,6 +15,7 @@ exclude =
     concrete/audio/*,
     concrete/clustering/*,
     concrete/communication/*,
+    concrete/context/*,
     concrete/email/*,
     concrete/entities/*,
     concrete/exceptions/*,
