Revert "Combine tests in travis, appveyor."
This reverts commit 3d4b73b06edc6766d6b4439110af1b988b869109.

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -55,7 +55,11 @@ test-py35-tests:
   stage: test
   script:
     - docker pull $CONTAINER_TEST_IMAGE-py35
-    - docker run $CONTAINER_TEST_IMAGE-py35 tox -e py35 tests
+    - touch coverage.xml
+    - docker run --mount type=bind,source=$PWD/coverage.xml,target=/tmp/concrete-python/coverage.xml $CONTAINER_TEST_IMAGE-py35 tox -e cov tests
+  artifacts:
+    reports:
+      cobertura: coverage.xml
   tags:
     - docker
 
