--- a/tox.ini
+++ b/tox.ini
@@ -4,7 +4,15 @@ envlist = pep8,py35,docs
 [testenv]
 deps = -r{toxinidir}/test-requirements.txt
 commands =
-    py.test --cov={envsitepackagesdir}/concrete {posargs:tests}
+    pytest {posargs:tests}
+setenv =
+    PYTHONPATH = {toxinidir}
+
+[testenv:cov]
+deps = -r{toxinidir}/test-requirements.txt
+commands =
+    pytest --cov=concrete {posargs:tests}
+    -coverage xml -o {toxinidir}/coverage.xml
 setenv =
     PYTHONPATH = {toxinidir}
 
