--- a/.travis.yml
+++ b/.travis.yml
@@ -17,5 +17,5 @@ script:
   # configured in tox.ini
   - tox -e pep8
   - tox -e docs
-  - tox -e py35 tests
+  - tox -e py35 --cov=concrete tests
   - tox -e py35 integration-tests
