--- a/appveyor.yml
+++ b/appveyor.yml
@@ -11,5 +11,5 @@ install:
 build_script:
 # configured in tox.ini
 - tox -e pep8,docs
-- tox -e py35 --cov=concrete tests
+- tox -e cov tests
 - tox -e py35 integration-tests
